# graphql_strawberry_fastapi

./: README.md  data.db  exemplo_01.py  exemplo_02.py  pyproject.toml
app/: app.py  db_funtions.py  models.py  schemas.py
